testdata/baselines/reference/submodule/compiler/checkJsFiles_noErrorLocation.errors.txt
a.js(11,17): error TS8010: Type annotations can only be used in TypeScript files.


==== a.js (1 errors) ====
    // @ts-check
    class A {
      constructor() {
    
      }
      foo() {
        return 4;
      }
    }
    
    class B extends A {
                    ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
      constructor() {
        super();
        this.foo = () => 3;
      }
    }
    
    const i = new B();
    i.foo();